syntax = "proto3";

package blog;

option go_package = "github.com/xans-me/grpc-blog-example/protobuff";

message Blog {
  string id = 1;
  string author_id = 2;
  string title = 3;
  string content = 4;
}

message CreateBlogRequest {
  Blog blog = 1;
}

message CreateBlogResponse {
  Blog blog = 1; // will have a blog id
}

service BlogService {
  rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse) {}
}
